--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HealthPulse - Track Your Health Journey</title>
+    <meta name="description" content="Simple, beautiful health tracking that helps you understand your wellness patterns and make better decisions for your health." />
   </head>
   <body>
     <div id="root"></div>
